Resolve wrapping of mpiFileUtils on homepage
Tweak css so the mpiFileUtils doesn't wrap on
index.html.

Closes #82

--- a/css/min.css
+++ b/css/min.css
@@ -7216,10 +7216,12 @@ td.visible-print {
   padding: 60px 0 5px;
   text-align: center;
 }
-.demo-logo {
+.demo-logo .logo {
   font: 900 90px/100px "Helvetica Neue", Helvetica, Arial, sans-serif;
   letter-spacing: -2px;
   margin: 10px 0;
+  overflow: hidden;
+  white-space: nowrap;
 }
 /*
 .demo-logo .logo {
